Do not crash on stale collection

Do not crash if the CollectionFetchJob does not return
the expected collection because the folder has been removed
in the meantime.

BUG: 257352